[package]
name = "karaoke"
version = "4.0.0-dev"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
frame-support = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-inherents = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest"}
async-trait = { version = "0.1.52", optional = true }
sp-runtime = { default-features = false, version = "5.0.0", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-std = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

[features]
default = [ "std" ]
std = [
    "codec/std",
    "frame-support/std",
    "scale-info/std",
    "sp-inherents/std",
    "sp-runtime/std",
    "sp-std/std",
	"async-trait"
]